# wasm2ts

./: Cargo.toml
src/: lib.rs  main.rs
tests/: integration_tests.rs  test.wasm  test.wasm.d.ts  test.wat
