[package]
name = "wasm2ts"
version = "0.1.0"
authors = ["Liam Murphy <liampm32@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
parity-wasm = "0.42.1"
swc_ecmascript = { version = "0.15.0", features = ["codegen"] }
swc_common = "0.10.7"
anyhow = "1.0.35"
lazy_static = "1.4.0"
